# sf_ds

./: .gitignore  README.md
project_0/: README.md  game.ipynb  game.py  pyproject.toml  requirements.txt
project_1/: README.md  hh-cvs-analysis.ipynb  pyproject.toml  requirements.txt
project_2/: README.md  hh-cvs-analysis.ipynb  pyproject.toml  requirements.txt
