[tool.poetry]
name = "python_and_sql"
description = "Head Hunter CVs Analysis"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.10"
pandas = "^2.2.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
html5lib = "^1.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
